.k8s/base/deploy-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hivebox-namespace
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hivebox-app
  name: hivebox-app
  namespace: hivebox-namespace
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app.kubernetes.io/name: hivebox-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hivebox-app
  name: hivebox-app
  namespace: hivebox-namespace
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hivebox-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hivebox-app
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: ghcr.io/maykb/hivebox-image:placeholder
        name: hivebox
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 0.5
            memory: 100Mi
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-secret
